# liblogger

./: .gitignore  CMakeLists.txt  JenkinsFile  LICENSE  Makefile  Makefile.am  README  autogen.sh  configure.ac  liblogger.pc  liblogger.pc.cmake  liblogger.pc.in
debian/: changelog  control  copyright  files  liblogger1-dev.install  rules
examples/: Makefile  callback.cpp  examples.h  file.cpp
include/: liblogger.h
include/liblogger/: ILogger.h  LogCallBack.h  LogFile.h  LogManager.h  LogPipe.h  LogStderr.h  LogStdout.h  LogSyslog.h  LogType.h  Logger.h
logmq/: CMakeLists.txt  Makefile.am  logmq.cpp
src/: CMakeLists.txt  LogCallBack.cpp  LogException.cpp  LogFile.cpp  LogFileDaily.cpp  LogFileHourly.cpp  LogFilterCallBack.cpp  LogFilterContains.cpp  LogFilterDup.cpp  LogFilterFunction.cpp  LogFilterRegex.cpp  LogFilterType.cpp  LogFunction.cpp  LogMQ.cpp  LogManager.cpp  LogManagerScopedLock.cpp  LogPipe.cpp  LogStderr.cpp  LogStdout.cpp  LogStdoutColor.cpp  LogSyslog.cpp  LogTail.cpp  LogTailIdx.cpp  LogTcpServer.cpp  LogType.cpp  LogUdp.cpp  LogUnixServer.cpp  Logger.cpp  Makefile  Makefile.am  ProxyLogger.cpp  StreamLogger.cpp  Trace.cpp  TraceLock.cpp  liblogger.h
src/liblogger/: ILogFilter.h  ILogger.h  LogCallBack.h  LogException.h  LogFile.h  LogFileDaily.h  LogFileHourly.h  LogFilterCallBack.h  LogFilterContains.h  LogFilterDup.h  LogFilterFunction.h  LogFilterRegex.h  LogFilterType.h  LogFunction.h  LogMQ.h  LogManager.h  LogManagerScopedLock.h  LogMutex.h  LogPipe.h  LogStderr.h  LogStdout.h  LogStdoutColor.h  LogSyslog.h  LogTail.h  LogTailIdx.h  LogTcpServer.h  LogType.h  LogUdp.h  LogUnixServer.h  Logger.h  ProxyLogger.h  StreamLogger.h  Trace.h  TraceLock.h
tests/: CMakeLists.txt  Makefile.am  benchmark.cpp  callback.cpp  examples.h  file.cpp  filedaily.cpp  filehourly.cpp  function.cpp  logmq.cpp  logonce.cpp  logperiod.cpp  pipe.cpp  proxylogger.cpp  remove.cpp  stderr.cpp  stdout.cpp  stdoutcolor.cpp  streamlogger.cpp  syslog.cpp  tail.cpp  tcpserver.cpp  testfilter.cpp  unixserver.cpp
