AC_INIT(liblogger, 1.0.0, james@stev.org)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SRCDIR([src/LogManager.cpp])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_FILES([liblogger.pc])

LT_INIT
AM_INIT_AUTOMAKE([foreign])

AC_PROG_CC
AC_PROG_CXX
AC_PROG_LIBTOOL

AX_CXX_COMPILE_STDCXX_11(noext, optional)

AX_COMPILER_FLAGS([WARN_CFLAGS],[WARN_LDFLAGS])
AC_SUBST([AM_CXXFLAGS], $WARN_CXXFLAGS)

AC_CHECK_HEADERS(syslog.h)
AC_CHECK_HEADER_STDBOOL()

AC_TYPE_SIZE_T
AC_TYPE_UINT64_T

AC_CHECK_FUNCS([localtime_r])

AC_OUTPUT(Makefile src/Makefile tests/Makefile)

