
lib_LTLIBRARIES=liblogger.la

liblogger_la_SOURCES=Logger.cpp LogException.cpp LogManager.cpp LogType.cpp LogManagerScopedLock.cpp \
		LogCallBack.cpp \
		LogFunction.cpp \
		LogFile.cpp \
		LogFileHourly.cpp \
		LogFileDaily.cpp \
		LogPipe.cpp \
		LogStderr.cpp \
		LogStdout.cpp \
		LogStdoutColor.cpp \
		LogSyslog.cpp \
		LogUdp.cpp \
		LogTcpServer.cpp \
		LogUnixServer.cpp \
		LogMQ.cpp \
		LogTail.cpp  \
		LogTailIdx.cpp \
		LogFilterType.cpp \
		LogFilterDup.cpp \
		LogFilterCallBack.cpp \
		LogFilterContains.cpp \
		StreamLogger.cpp


include_HEADERS=liblogger.h

otherincludedir = $(includedir)/liblogger

otherinclude_HEADERS=liblogger/LogManager.h liblogger/LogException.h liblogger/LogManagerScopedLock.h liblogger/ILogger.h liblogger/ILogFilter.h liblogger/LogType.h \
	liblogger/LogCallBack.h \
	liblogger/LogFunction.h \
	liblogger/LogFile.h \
	liblogger/LogFileHourly.h \
	liblogger/LogFileDaily.h \
	liblogger/Logger.h \
	liblogger/LogPipe.h \
	liblogger/LogStderr.h \
	liblogger/LogStdout.h \
	liblogger/LogStdoutColor.h \
	liblogger/LogSyslog.h \
	liblogger/LogUdp.h \
	liblogger/LogTcpServer.h \
	liblogger/LogUnixServer.h \
	liblogger/LogMQ.h \
	liblogger/LogTail.h \
	liblogger/LogTailIdx.h \
	liblogger/LogFilterType.h \
	liblogger/LogFilterDup.h \
	liblogger/LogFilterCallBack.h \
	liblogger/LogFilterContains.h \
	liblogger/LogMutex.h \
	liblogger/StreamLogger.h


